# solana-yield-adapter-standardx

./: .gitignore  AGENTS.md  Anchor.toml  Cargo.toml  README.md  REPOS.md  package-lock.json  package.json  tsconfig.json
crates/adapter-utils/: Cargo.toml
crates/adapter-utils/src/: lib.rs
crates/interface/: Cargo.toml
crates/interface/src/: lib.rs
docs/: architecture.md  build-your-own-adapter.md  mainnet-fork-tests.md  protocol-notes.md  protocol-research.md  reference-repo-lessons.md  standard.md  submission.md
programs/adapters/drift-if/: Cargo.toml
programs/adapters/drift-if/src/: lib.rs
programs/adapters/jupiter-jlp/: Cargo.toml
programs/adapters/jupiter-jlp/src/: lib.rs
programs/adapters/kamino-usdc/: Cargo.toml
programs/adapters/kamino-usdc/src/: lib.rs
programs/adapters/maple-syrup/: Cargo.toml
programs/adapters/maple-syrup/src/: lib.rs
programs/adapters/marginfi-usdc/: Cargo.toml
programs/adapters/marginfi-usdc/src/: lib.rs
programs/adapters/mock/: Cargo.toml
programs/adapters/mock/src/: lib.rs
programs/dispatcher/: Cargo.toml
programs/dispatcher/src/: lib.rs
programs/registry/: Cargo.toml
programs/registry/src/: lib.rs
scripts/: program-keys.ts
scripts/bounty/: check.ts
scripts/devnet/: common.ts  deploy-registry.ts  verify-registry.ts
scripts/mainnet-fork/: accounts.ts  run.ts
sdk/src/: index.ts
tests/: conformance.spec.ts  mock-adapter.spec.ts
tests/mainnet-fork/: account-plan.spec.ts  harness.ts  roundtrip.spec.ts
