[workspace]
members = [
    "crates/interface",
    "crates/adapter-utils",
    "programs/registry",
    "programs/dispatcher",
    "programs/adapters/mock",
    "programs/adapters/kamino-usdc",
    "programs/adapters/marginfi-usdc",
    "programs/adapters/jupiter-jlp",
    "programs/adapters/maple-syrup",
    "programs/adapters/drift-if",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
syas-interface = { path = "crates/interface" }
syas-registry = { path = "programs/registry", features = ["no-entrypoint"] }
syas-adapter-utils = { path = "crates/adapter-utils" }

[workspace.lints.rust]
unexpected_cfgs = "allow"
deprecated = "allow"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
