[package]
name = "syas-adapter-utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "syas_adapter_utils"

[lints]
workspace = true

[features]
default = []
no-idl = []
idl-build = ["anchor-lang/idl-build", "syas-interface/idl-build", "syas-registry/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
syas-interface = { workspace = true }
syas-registry = { workspace = true }
