[package]
name = "syas-registry"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "registry"

[lints]
workspace = true

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "syas-interface/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
syas-interface = { workspace = true }
