[package]
name = "jupiter-jlp-adapter"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "jupiter_jlp_adapter"

[lints]
workspace = true

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
    "syas-interface/idl-build",
    "syas-adapter-utils/idl-build",
]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
syas-adapter-utils = { workspace = true }
syas-interface = { workspace = true }
